// $Id$

Switchtheme x.x-x.x, xxxx-xx-xx
-------------------------------


Switchtheme 6.x-1.x, xxxx-xx-xx
-------------------------------
#455796 by sun: Fixed query string allows to select disabled themes.
#417120 by dereine: Fixed random theme block displays disabled themes.


Switchtheme 6.x-1.1, 2009-07-06
-------------------------------
#484574 by sun: Fixed wrong link to Sections project in README.txt.
#273909 by sun: Fixed theme switches after next page load for authenticated
  users only.
#249020 by SeanA: Changed default theme names to be capitalized by default.
#264001 by Rob Loach: Added switching theme based on browser.
#264001 by Rob Loach, sun: Fixed improper use of t() for menu items and moved
  administrative functions into include.
#292437 by sun: Fixed installation instructions.
#266479 by gusgsm1: Added Spanish translation.


Switchtheme 6.x-1.0, 2008-05-02
-------------------------------
#227246 by sun: Added docs about switching themes via query string.
#185254 by sun: Fixed themes don't switch for anonymous users.
#247348 by sun: Fixed Switchtheme alters the default theme of a site.


Switchtheme 5.x-1.1, 2006-12-29
-------------------------------
#103684: Fixed theme selection via $_GET query parameter.


Switchtheme 5.x-1.0, 2006-11-15
-------------------------------
Initial release of Switchtheme for Drupal 5.x.

