@@ -1,17 +1,0 @@
-/* $Id$ */
-
-#switchtheme-switch-form div {
-  width: 100%;
-}
-#switchtheme-switch-form div.form-item {
-  float: left;
-  width: auto;
-  margin: 0;
-  padding: 0;
-}
-#switchtheme-switch-form #edit-submit {
-  float: left;
-  width: auto;
-  margin-left: 3px;
-}
-
