@@ -1,4 +1,6 @@
 ; $Id$
 name = Switchtheme
 description = Allows switching the theme in various means.
-core = 6.x
+core = 7.x
+package = User interface
+configure = admin/config/user-interface/switchtheme
