@@ -1,0 +1,16 @@
+<?php
+// $Id$
+
+/**
+ * @file
+ * Installation functions for Switchtheme module.
+ */
+
+/**
+ * Implements hook_uninstall().
+ */
+function switchtheme_uninstall() {
+  db_delete('variable')
+    ->condition('name', 'switchtheme_%', 'LIKE')
+    ->execute;
+}
